--- a/app/src/main/res/layout/activity_add_offer.xml
+++ b/app/src/main/res/layout/activity_add_offer.xml
@@ -13,13 +13,14 @@
         android:id="@+id/rl_nav_menu">
         
         <ImageButton
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="5dp"
             android:background="@null"
+            android:layout_toRightOf="@+id/tv_add_internship"
             android:src="@drawable/ic_back_button"
             />
 
@@ -32,7 +33,7 @@
             android:text="Add an internship"
             android:textAlignment="center"
             android:layout_centerVertical="true"
-            android:textSize="30sp"
+            android:textSize="20dp"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="0dp"
             android:layout_centerHorizontal="true"/>
@@ -40,7 +41,7 @@
     </RelativeLayout>
 
     <EditText
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="25dp"
         android:id="@+id/et_position"
         android:layout_width="309dp"
         android:layout_height="wrap_content"
@@ -92,7 +93,7 @@
         android:layout_marginTop="5dp"
         android:id="@+id/et_description"
         android:layout_width="308dp"
-        android:layout_height="170dp"
+        android:layout_height="120dp"
         android:background="@drawable/edittext_style"
         android:hint="Description"
         android:textColor="@color/black"
@@ -105,7 +106,7 @@
         android:layout_width="308dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/et_description"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true">
         
         <RadioGroup
