--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -91,6 +91,7 @@
                 android:text="Are you an employer?" />
 
             <CheckBox
+                android:id="@+id/cb_user_role"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
