--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -71,6 +71,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
+                    android:id="@+id/et_user_firstname"
                     android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
@@ -94,6 +95,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
+                    android:id="@+id/et_user_lastname"
                     android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
@@ -117,6 +119,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
+                    android:id="@+id/et_user_description"
                     android:layout_width="180dp"
                     android:layout_height="70dp"
                     android:layout_marginEnd="8dp"
@@ -153,6 +156,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
+                    android:id="@+id/et_user_email"
                     android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
@@ -176,6 +180,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
+                    android:id="@+id/et_user_phone"
                     android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
