--- a/app/src/main/res/layout/activity_all_offer_list.xml
+++ b/app/src/main/res/layout/activity_all_offer_list.xml
@@ -4,8 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <include layout="@layout/bottom_navigation" />
-    
     <TextView
         android:id="@+id/tv_internships"
         android:layout_width="match_parent"
@@ -19,7 +17,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_all_offers"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/tv_internships">
     </android.support.v7.widget.RecyclerView>
 
@@ -38,5 +36,7 @@
         android:src="@drawable/ic_action_plus"
         android:visibility="gone"
         />
+
+    <include layout="@layout/bottom_navigation" />
 
 </RelativeLayout>
